<resources>
    <string name="app_name">Chording</string>
    <string name="import_a_song">Import a song</string>
    <string name="advanced">Advanced</string>
    <string name="artist_name">Artist name</string>
    <string name="song_title">Song title</string>
    <string name="capo">Capo</string>
    <string name="style">Style</string>
    <string name="song_body">Song body</string>
    <string name="save">Save</string>
    <string name="tuning">Tuning</string>
    <string name="key">Key</string>
    <string name="john_lennon">John Lennon</string>
    <string name="savedTabs">Saved Tabs:</string>
    <string name="my_tabs">My tabs</string>
    <string name="my_sets">My sets</string>
    <string name="item">Item</string>
    <string name="slash">-</string>
    <string name="chords">Chords</string>
    <string name="buttonforcontextmenu">ButtonForContextMenu</string>
    <string name="todo">TODO</string>
    <string name="cmdelete">Delete</string>
    <string name="cmedit">Edit</string>
    <string name="duration">Duration</string>
    <string name="twoDots">:</string>
    <string name="imagine">Imagine</string>
    <string name="add_set">Add set</string>
    <string name="add_song">Add song</string>
    <string name="add_to_set">Add to set</string>
    <string name="remove_from_set">Remove from set</string>
    <string name="zoom_in_and_out_button">zoom in and out button</string>
    <string name="automatic_scroll_button">automatic scroll button</string>


    <string-array name="capo">

        <item>No Capo</item>
        <item>1st fret</item>
        <item>2nd fret</item>
        <item>3rd fret</item>
        <item>4th fret</item>
        <item>5th fret</item>
        <item>6th fret</item>
        <item>7th fret</item>
        <item>8th fret</item>
        <item>9th fret</item>
        <item>10th fret</item>
        <item>11th fret</item>
        <item>12th fret</item>

    </string-array>

    <string-array name="style">

        <item>Undetermined</item>
        <item>Country</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Jazz</item>
        <item>Metal</item>
        <item>Funk</item>
        <item>Classic</item>
        <item>FingerStyle</item>

    </string-array>

    <string-array name="tuning">

        <item>Undetermined</item>
        <item>E A D G B E - Standard</item>
        <item>Eb Ab Db Gb Bb Eb - Half-Step Down</item>
        <item>E A D G C F - Perfect Fourth Tuning</item>
        <item>A D G C E A - A tuning</item>
        <item>B E A D F# B  - B tuning</item>
        <item>C F Bb Eb G C - C tuning</item>


    </string-array>

    <string-array name="key">

        <item>Undetermined</item>
        <item>C</item>
        <item>G</item>
        <item>D</item>
        <item>A</item>
        <item>E</item>
        <item>B</item>
        <item>F#</item>
        <item>Db</item>
        <item>Ab</item>
        <item>Eb</item>
        <item>Bb</item>
        <item>F</item>
        <item>Dm</item>
        <item>Am</item>
        <item>Em</item>
        <item>Bm</item>
        <item>Fm</item>
        <item>C#m</item>
        <item>Gm</item>
        <item>D#m</item>
        <item>A#m</item>

    </string-array>

    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="settings">Settings</string>
    <string name="sortByDate">By date</string>
    <string name="sortAlphabetically">A - Z</string>
    <string name="sortByArtist">By artist</string>
    <string name="copyright_acknowledgement">Copyright Acknowledgement</string>
    <string name="copyright_acknowledgement_content">

        Our application serves as a platform for users to privately upload and access chord sheets for songs. These songs may include compositions by the user or copyrighted music. It is important to note that our application does not facilitate the sharing of chord sheets between users. \n \n

        Our primary function is to provide users with a personal and exclusive local database for storing and accessing chord sheets for their individual use. Users are solely responsible for ensuring that the chord sheets they upload and use comply with copyright laws. \n \n

        We emphasize that the use of copyrighted material within our application is intended solely for private and personal use by individual users. Any sharing, distribution, or reproduction of copyrighted material outside the application is strictly prohibited. \n \n

        By using our application, users acknowledge and agree to adhere to all applicable copyright laws and regulations. We encourage users to respect the rights of copyright holders and to seek appropriate permissions when necessary. \n \n

        Our application does not claim ownership of any chord sheets uploaded by users. All intellectual property rights to the content uploaded by users remain with the respective owners. \n \n

        Thank you for your understanding and cooperation in upholding copyright laws and protecting the rights of creators.</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="i_confirm_that_i_have_read_the_copyright_information">I confirm that I have read the copyright information</string>
    <string name="dark_mode">Dark mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_the_zoom_in_button_to_access_the_zoom_in_or_zoom_out_menu">Press the zoom in button to access the zoom in or zoom out menu</string>
    <string name="press_the_auto_scroll_button_to_activate_automatic_scroll">Press the auto scroll button to activate automatic scroll</string>
    <string name="swipe_left_to_jump_to_the_previous_song">Swipe left to jump to the previous song</string>
    <string name="swipe_right_to_jump_to_the_next_song">Swipe right to jump to the next song</string>
    <string name="press_the_edit_button_to_edit_the_current_tab">Press the edit button to edit the current tab</string>
    <string name="keep_the_auto_scroll_button_pressed_to_adjust_the_duration_of_the_song_if_the_song_duration_is_made_longer_the_automatic_scroll_will_be_slower_if_it_is_made_shorter_the_automatic_scroll_will_be_faster">Keep the auto scroll button pressed to adjust the duration of the song. If the song duration is made longer, the automatic scroll will be slower. If it is made shorter, the automatic scroll will be faster.</string>
    <string name="about">About</string>
    <string name="app_developed_by">App developed by:</string>
    <string name="antonio_ruiz_martin">Antonio Ruiz Martin</string>
    <string
        name="messageWithLink"><a href="https://www.linkedin.com/in/antonio-ruiz-martin-b4b06929b/">Antonio Ruiz Martin</a></string>
    <string name="as_part_of_his_dissertation_project_for_the_course_computer_science_level_6_2023_2024">As part of his dissertation project for the course Computer Science, Level 6, 2023 - 2024</string>
    <string name="university_of_chester">University of Chester</string>


</resources>