<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UploadActivity">

    <Button
        android:id="@+id/importBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_a_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/advancedFieldsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tabsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savedTabs"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        />

    <TextView
        android:id="@+id/numberOfTabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
         />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/generalFields"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:context=".activities.UploadActivity">


        <EditText
            android:id="@+id/editSongTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="imagine"
            android:background="@color/secondary"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="20dp"
            android:text="@string/song_title"
            android:hint="@string/imagine"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:id="@+id/editArtistName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="John Lennon"
            android:background="@color/secondary"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:text="@string/artist_name"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/capo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/secondary"
            android:contentDescription="@string/capo"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:spinnerMode="dialog"
            android:text="@string/capo"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/secondary"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/capoSpinner"
            android:layout_width="121dp"
            android:layout_height="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />


        <NumberPicker
            android:id="@+id/durationPickerMinutes"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.74"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="@string/twoDots"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"

            />

        <NumberPicker
            android:id="@+id/durationPickerSeconds"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/advancedFields"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:context=".activities.UploadActivity">

        <TextView
            android:id="@+id/tuning"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/secondary"
            android:contentDescription="@string/tuning"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:spinnerMode="dialog"
            android:text="@string/tuning"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/secondary"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/key"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/tuningSpinner"
            android:layout_width="121dp"
            android:layout_height="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />


        <Spinner
            android:id="@+id/keySpinner"
            android:layout_width="121dp"
            android:layout_height="26dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.365" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songBodyLayout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generalFields"
        app:layout_constraintVertical_bias="1"
        tools:context=".activities.UploadActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginBottom="10dp"
            android:background="@color/secondary"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/song_body"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />



        <EditText
            android:id="@+id/songBody"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:ems="6"
            android:fontFamily="@font/cousine"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>